[gd_scene load_steps=5 format=3 uid="uid://xe4brmt31tcg"]

[ext_resource type="Script" path="res://GameOverScreen.gd" id="1_g2v17"]
[ext_resource type="Texture2D" uid="uid://bipa4dasejviv" path="res://Assets/GUI.png" id="2_md8fu"]
[ext_resource type="Theme" uid="uid://byxolqbfki1a5" path="res://Assets/theme1.tres" id="3_55tnq"]

[sub_resource type="AtlasTexture" id="AtlasTexture_a3bnm"]
atlas = ExtResource("2_md8fu")
region = Rect2(80, 96, 32, 32)

[node name="GameOverScreen" type="Control"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_g2v17")

[node name="ColorRect3" type="TextureRect" parent="."]
modulate = Color(1, 0.74902, 0.560784, 1)
z_index = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -166.0
offset_top = -215.0
offset_right = 164.0
offset_bottom = 215.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = SubResource("AtlasTexture_a3bnm")

[node name="HBoxContainer" type="VBoxContainer" parent="."]
z_index = 2
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -124.0
offset_top = -133.0
offset_right = 124.0
offset_bottom = 133.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("3_55tnq")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
text = "You won!"

[node name="Restart" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 5
size_flags_vertical = 3
theme = ExtResource("3_55tnq")
text = "Restart
"

[node name="MainMenu" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 5
size_flags_vertical = 3
theme = ExtResource("3_55tnq")
text = "Main Menu"

[node name="Quit" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 5
size_flags_vertical = 3
theme = ExtResource("3_55tnq")
text = "Quit"

[connection signal="pressed" from="HBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="HBoxContainer/MainMenu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="HBoxContainer/Quit" to="." method="_on_quit_pressed"]
